www/css/main.css
html { height: 100% }
body { height: 100%; margin: 0; padding: 0 }

#map_canvas { 
    width:795px;
    height:500px;
    float:right;
}

#sliders {
    text-align: center;
    width: 150px;
    float: left;
    height: 545px;
    margin-right: 5px;
}

.border {
    border-style:solid;
    border-width:1px;
    border-color:black;
    -moz-border-radius: 7px;
    border-radius: 7px;
}

#map {
    float: left;
    padding: 3px;
    height: 540px;
}

#slider_container {
    margin-top:100px;
}

.slider {
    padding-left:40px;
    position: absolute;
}

.slider_title {
    padding-bottom: 3px;
}

#af_slider, #cfs_slider, #date_slider {
    height:380px;
}

#display_type {
    font-size: 30px;
}

#amounts input {
    width:110px;
    border-style:solid;
    border-width:1px;
    border-color:black;
}

.amounts {
    margin-top:5px;
    margin-left: 20px;
}

#amounts input:focus{
    border-style:solid;
    border-width:2px;
    border-color:black;
}

.water_min {
    position:absolute;
    left:60px;
    top:370px;
    width: 85px;
    text-align: left;
}

#sliderTabs {
    float: left;
    width: 335px;
    padding:5px;
}

#dataType {
    float: left;
    text-align: center;
    width: 500px;
    margin-top:10px;
}

#amounts {
    float: left;
    text-align: center;
}

#headLinks {
    float: left;
    wdith: 25%;
    margin-top:5px;
}

#infowindow {
    height:500px;
}

#headLinks img {
    width: 30px;
    height: 30px;
    vertical-align: middle;
}

#headLinks a{
    text-align: right;
}

#instructions {
    margin-top: 10px;
}

#instructions ol {
    margin-left: 250px;
    margin-right: 150px;
}

#instructions h3{
    text-align: center;
}

#sliderTabs h3 {
    display: inline;
}

#sliderTabs a{
    padding:5px;
    border-style:solid;
    border-width:1px;
    border-color:black;
}

.water_med {
    position:absolute;
    left:60px;
    top:175px;
    width: 85px;
    text-align: left;
}

.water_max {
    position:absolute;
    left:60px;
    top:0px;
    width: 85px;
    text-align: left;
}

#mapHeader {
    height:30px;
    width: 100%;
}

/** Table **/
.infoBoxTable table, th, td {
    border: 1px solid black;
}

.infoBoxTable th, td {
    padding-left: 3px;
    padding-right: 3px;
}

